<resources>
    <string name="app_name">Disaster Managent System</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_api_key">AIzaSyD1bTk9oDdqAv2qaxi4t86me2NZz2LwA1w</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go_back_to">Go back to</string>
    <string name="sign_up">Sign UP</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disaster_management">Welcome to Disaster Management</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="emergency_number_2">Emergency number 2</string>
    <string name="please_provide_required_emergency_phone_numbers">*Please provide required emergency phone numbers</string>
    <string name="marker_location_selection">*Please select location by adding marker</string>
    <string name="create">Create</string>
</resources>